<resources>
    <string name="app_name">FitZ</string>
    <string name="titleString">FitZ</string>
    <string name="fitz_logo_picture">fitz logo picture</string>
    <string name="username">Username</string>
    <string name="create_email">Email</string>
    <string name="create_password">Password</string>
    <string name="create_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="my_account">Account</string>
    <string name="exercises">Exercises</string>
    <string name="routine">Routine</string>
    <string name="map">Map</string>

    <string name="fragment_container"> Fragment Container</string>

    <string name="profile_pic">Profile Pic</string>
    <string name="username_profile"> Profile Username </string>

    <string name="strength_workout"> Strength</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
